# abn

./: CMakeLists.txt  main.cxx  readme.md
include/abn/: abn.hxx  auto_biographical_numbers.hh
src/: auto_biographical_numbers.cc
